OpenVi 7.0.1 -> OpenVi 7.0.2 (Unreleased): Tue Jan 25 11:29:48 2022
	+ Apply Debian patch to fix backwards sentence moving
	+ Fix horizontal scroll count; patch from Debian
	+ regexec: Change a #define to a typedef in regex library
	+ Documentation: Fix some typos and minor errors in the tutorials
	+ Update .gitignore to include patch/diff detritus; no binary change.
	+ Adjust calculation to avoid "BDB0511 page sizes must be a power-of-2"
	  warning; BDB 1.85 only cared if oage size was even; closes GH issue #3
	+ Apply .exrc writability patch from hesso at pool.math.tu-berlin.de
	+ If TERM is unset, set to null, or otherwise unknown, first attempt
	  to fallback to "vt100"; exit with a fatal error if "vt100" fails.
	+ Disallow pattern spaces which would cause intermediate
	  calculations to overflow size_t. (CERT: VU#695940)
	+ Bump version and use -dev to denote development version
	+ Reformat ChangeLog for consistency; various spelling corrections
	+ Update ChangeLog with OpenVi history
	+ Format OpenBSD commits to ChangeLog format
	+ Documentation: Clean-up legacy documentation, adjust formatting
	+ Simplify GNUmakefile rules
	+ Update GNUmakefile; correct a typo in a message
	+ Update LICENSE text and formatting

OpenBSD 7.0 -> OpenVi 7.0.1: Mon Jan 24 10:37:28 2022
	+ OpenVi created supporting glibc-based Linux systems
	+ Build: Create GNUmakefile
	+ Build: Attempt to detect and use mtmalloc or jemalloc if available
	+ BDB: Support builds with post-1.8.5 BerkeleyDB versions (using BDB
	  1.8.5 emulation) but at the expense of preservation and recovery.
	+ Documentation: Create initial README.md

Mon Oct 25 14:17:24 2021
	+ vi(1): fix use after free with unsaved buffer

Sun Oct 24 21:24:15 2021
	+ For open/openat, if the flags parameter does not contain
	  O_CREAT, the 3rd (variadic) mode_t parameter is irrelevant.
	  Many developers in the past have passed mode_t (0, 044, 0644,
	  or such), which might lead future people to copy this broken